fix: swipe and drag confict

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <app></app>
     <!-- built files will be auto injected -->
+    <script>
+      document.addEventListener('contextmenu', function(e) {
+        e.preventDefault();
+      })
     </script>
   </body>
 </html>
